# Crosshatch

./: .gitignore  LICENSE  README.md  prompttest.py  pyproject.toml
.github/workflows/: automerge.yml  format.yml  pylint.yml
crosshatch/: __init__.py  __main__.py  commands.py  const.py  help.py  highlighter.py  repl.py
