[tool.poetry]
name = "vyxal-crosshatch"
version = "0.1.0"
description = "A pretty REPL for Vyxal."
authors = ["Ginger < 75683114+GingerIndustries@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
vyxal = "^2.18.5"
rich = "^13.2.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"